--- a/03_React-타입분석/04_번외편-브랜딩-기법.md
+++ b/03_React-타입분석/04_번외편-브랜딩-기법.md
@@ -1,1 +1,142 @@
 ## 번외편: 브랜딩 기법
+
+<br />
+
+`useEffect`의 `EffectCallback` 타입을 살펴보면서 봤던 `Destructor`.
+
+```ts
+// Destructor
+declare const UNDEFINED_VOID_ONLY: unique symbol;
+// Destructors are only allowed to return void.
+type Destructor = () => void | { [UNDEFINED_VOID_ONLY]: never };
+```
+
+> `unique symbol;`은 `Symbol()`을 타이핑하는 방법.
+
+`| { [UNDEFINED_VOID_ONLY]: never };`가 어떤 의미인지 파악이 잘 되지 않는다.<br />
+이 의미를 찾아가보자.
+
+### 코드의 history를 추적하는 방법.
+
+깃헙 레파지토리에서 해당 라인을 클릭해보면 볼 수 있는 메뉴들 가운데,<br />
+`View git blame`으로 들어가면 이를 수정한 사람을 볼 수있다.<br />
+
+<img width="617" src="https://user-images.githubusercontent.com/19165916/199877510-6fe5c79f-a9cb-4ae5-afe5-f087d3e36640.png" /><br />
+
+거기에 이 사람이 수정한 이유를 적어놨는데,<br />
+
+<img width="1144" src="https://user-images.githubusercontent.com/19165916/199877581-bf0bdc50-2c5c-4295-84eb-3e68d9a509bc.png" /><br />
+
+> [링크](https://github.com/DefinitelyTyped/DefinitelyTyped/commit/fd8868d42a5256356859bc2a72664736a00c0d62)로 들어가 보자.
+
+내용은 다음과 같다.
+
+```
+Improve react's no-return hack for TS 4.3 (#51081)
+* Improve react's no-return hack
+
+React, along with react-dom and react-test-renderer, have a few return
+types that are intended to disallow returning anything except
+`undefined`. Previously, the union type `void | undefined` worked for
+this purpose, but with TS 4.3's new, more aggressive subtype reduction,
+this is treated as just `void`. And `void`-returning signatures allow
+*anything* to be returned.
+
+The solution is to use a brand with void, like `void | { _a: never}`.
+This allows functions that don't actually return anything to infer
+`void`, which is assignable to `void`. Any functions with a return
+statement will infer from the return statement, and that type will not
+be assignable to `{ _a: never }`✅. Thanks to @tjjfvi for suggesting this
+solution.
+
+Exceptions are
+
+1. returning expressions of type `undefined`
+2. returning expressions of type `void`
+3. casting to the brand type.
+
+The first should be fine, the second should rarely happen by mistake,
+and the third should only happen as an intentional workaround.
+
+I'm opening this PR in order to maintain backward compatibility. It's
+entirely possible that trying to restrict the return type of callbacks
+is pointless, and that it's fine for callbacks to actually return
+anything. If that's the case, it would be fine to simplify the return
+type to just `void`.
+
+* use unique symbol+type alias for brand ✅
+```
+
+> `{ _a: never }` 문법과 brand라는 말이 눈에 띈다.
+
+<br />
+
+### 브랜딩 기법
+
+> [참조 - medium_Surviving the TypeScript Ecosystem — Part 6: Branding and Type-Tagging](https://medium.com/@KevinBGreene/surviving-the-typescript-ecosystem-branding-and-type-tagging-6cf6e516523d)
+
+```ts
+type Brand<K, T> = K & { __brand: T };
+```
+
+다음과 같은 코드가 있다고 했을 때,
+
+```ts
+const usd = 10;
+const eur = 10;
+function euroToUsd(euro: number): number {
+  return euro * 1.18;
+}
+console.log(`USD: ${euroToUsd(eur)}`);
+```
+
+만약 한화가 추가된다면 어떻게 막을 수(타이핑할수) 있을까?
+
+```ts
+const usd = 10;
+const eur = 10;
+const krw = 1500;
+function euroToUsd(euro: number): number {
+  return euro * 1.18;
+}
+console.log(`USD: ${euroToUsd(eur)}`);
+ueroToUsd(krw); // krw 역시 number기 때문에 막을 수가 없다.
+```
+
+```ts
+type EUR = number; // 타입앨리어스를 사용한다고 하더라도 역시 number기 때문에 막을 수가 없다.
+
+const usd = 10;
+const eur = 10;
+const krw = 1500;
+function euroToUsd(euro: EUR): number {
+  return euro * 1.18;
+}
+console.log(`USD: ${euroToUsd(eur)}`);
+ueroToUsd(krw);
+```
+
+이럴 때 브랜딩 기법을 사용한다.
+
+```ts
+type Brand<K, T> = K & { __brand: T };
+
+type USD = Brand<number, "USD">;
+type EUR = Brand<number, "EUR">;
+type KRW = Brand<number, "KRW">;
+
+// USD, EUR, KRW 타입들은 브랜딩 기법으로 만들어진 타입들이기 때문에
+// 타입 단언을 해야하긴 하다.
+const usd = 10 as USD;
+const eur = 10 as EUR;
+const krw = 1500 as KRW;
+function euroToUsd(euro: EUR): number {
+  return euro * 1.18;
+}
+console.log(`USD: ${euroToUsd(eur)}`);
+ueroToUsd(krw); // Error.
+```
+
+<br />
+
+음... `| { [UNDEFINED_VOID_ONLY]: never };`가 어떤 의미인지 찾아보려다가 브랜딩 기법까지 왔는데, `useEffect`에 예외적으로 들어오는 그리고 void에 할당할 수 없는 특성을 가진 `undefined`를 캐스팅하기 위한 테크닉으로 보인다. (타입이 never면 사라짐)
