--- a/03_React-타입분석/04_번외편-브랜딩-기법.md
+++ b/03_React-타입분석/04_번외편-브랜딩-기법.md
@@ -16,6 +16,8 @@ type Destructor = () => void | { [UNDEFINED_VOID_ONLY]: never };
 `| { [UNDEFINED_VOID_ONLY]: never };`가 어떤 의미인지 파악이 잘 되지 않는다.<br />
 이 의미를 찾아가보자.
 
+<br />
+
 ### 코드의 history를 추적하는 방법.
 
 깃헙 레파지토리에서 해당 라인을 클릭해보면 볼 수 있는 메뉴들 가운데,<br />
@@ -27,7 +29,7 @@ type Destructor = () => void | { [UNDEFINED_VOID_ONLY]: never };
 
 <img width="1144" src="https://user-images.githubusercontent.com/19165916/199877581-bf0bdc50-2c5c-4295-84eb-3e68d9a509bc.png" /><br />
 
-> [링크](https://github.com/DefinitelyTyped/DefinitelyTyped/commit/fd8868d42a5256356859bc2a72664736a00c0d62)로 들어가 보자.
+> 내용을 직접 살펴보려면 [링크](https://github.com/DefinitelyTyped/DefinitelyTyped/commit/fd8868d42a5256356859bc2a72664736a00c0d62)로 들어가 보자.
 
 내용은 다음과 같다.
 
@@ -90,7 +92,7 @@ function euroToUsd(euro: number): number {
 console.log(`USD: ${euroToUsd(eur)}`);
 ```
 
-만약 한화가 추가된다면 어떻게 막을 수(타이핑할수) 있을까?
+만약 한화(KRW)가 추가된다면 어떻게 막을 수(타이핑 할 수) 있을까?
 
 ```ts
 const usd = 10;
@@ -116,7 +118,7 @@ console.log(`USD: ${euroToUsd(eur)}`);
 ueroToUsd(krw);
 ```
 
-이럴 때 브랜딩 기법을 사용한다.
+이를 방지하고자 브랜딩 기법을 사용한다.
 
 ```ts
 type Brand<K, T> = K & { __brand: T };
@@ -139,4 +141,6 @@ ueroToUsd(krw); // Error.
 
 <br />
 
-음... `| { [UNDEFINED_VOID_ONLY]: never };`가 어떤 의미인지 찾아보려다가 브랜딩 기법까지 왔는데, `useEffect`에 예외적으로 들어오는 그리고 void에 할당할 수 없는 특성을 가진 `undefined`를 캐스팅하기 위한 테크닉으로 보인다. (타입이 never면 사라짐)
+음... `| { [UNDEFINED_VOID_ONLY]: never };`가 어떤 의미인지 찾아보려다가 브랜딩 기법까지 왔는데, 설명을 살펴보니 `useEffect`에 예외적으로 들어오는 그리고 void에 할당할 수 없는 특성을 가진 `undefined`를 캐스팅하기 위한, `useEffect`의 `effect`매개변수에 void만을 타이핑하기 위한(그래서 나머지 타입은 파괴하는 Desctructor) 테크닉으로 보인다. (타입이 never면 사라짐)<br />
+
+...주석에도 그리 적혀있구나 `Destructors are only allowed to return void.`
